# narigama-protohackers

./: Cargo.toml
src/: main.rs  prime_time.rs  smoke_test.rs  util.rs
