[package]
name = "narigama-protohackers"
version = "0.1.0"
edition = "2021"
authors = ["David Smith <david@narigama.dev>"]

[dependencies]
clap = { version = "4.0.27", features = ["env", "derive"] }
eyre = "0.6.8"
futures = "0.3.25"
is_prime = "2.0.9"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "net", "io-util"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
